[package]
name = "kalndri"
version = "0.1.0"
edition = "2024"

[dependencies]
# templating
handlebars = {version = "6.3.2"}

# proc macros
syn = {version = "2.0.104"}

# server side
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
