[package]
name = "kalndri"
version = "0.1.0"
edition = "2024"

[dependencies]
# templating
handlebars = { version = "6.3.2" }

# server side
axum = { version = "0.8.4" }
tokio = { version = "1", features = ["full"] }

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# proc macros
syn = { version = "2.0.104" }

